# backends

./: .env  .env.example  Cargo.toml
entity/src/: achievment.rs  lib.rs  room.rs  task.rs  user.rs  user_achievment.rs  user_room.rs
migration/src/: lib.rs  m20230930_080511_update1.rs  m20230930_081503_update3.rs  m20230930_082749_update4.rs  m20230930_090923_update5.rs  m20230930_093017_update6.rs  m20230930_100432_update10.rs  m20230930_102215_update11.rs  m20230930_105117_update11.rs  m20230930_105636_update12.rs  m20230930_114305_update13.rs  m20230930_115447_update15.rs  m20230930_142315_update19.rs  m20230930_155501_update22.rs  m20230930_171413_update24.rs  m20230930_195548_update4.rs
src/: main.rs
